[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/level.gd" type="Script" id=1]
[ext_resource path="res://sounds/shotgun_load.wav" type="AudioStream" id=2]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/bullets/lethal/Lethal.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/bullets/fake/Fake.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Chasecam.gd" type="Script" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://HUD.gd" type="Script" id=10]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )
sound_reload = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 577.065, 655.029 )
scale = Vector2( 1.01408, 1 )
Lethal = ExtResource( 4 )
Fake = ExtResource( 5 )

[node name="HorizontalWalls" type="Node" parent="."]

[node name="Wall" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 807.442, 578.051 )
scale = Vector2( 38, -1.353 )

[node name="Wall2" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 810.922, 432.121 )
rotation = -3.14159
scale = Vector2( 54.463, 1.496 )

[node name="Wall3" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 687.175, 157.324 )
rotation = -3.14159
scale = Vector2( 11, 1.496 )

[node name="Wall4" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 513.83, 739.628 )
scale = Vector2( 25.3581, -1.35323 )

[node name="Wall7" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 1508.85, 187.388 )
rotation = -3.14159
scale = Vector2( 8, 1.496 )

[node name="Wall9" parent="HorizontalWalls" instance=ExtResource( 6 )]
position = Vector2( 1338.57, 744.607 )
scale = Vector2( 26, -1.353 )

[node name="VerticalWalls" type="Node" parent="."]

[node name="Wall6" parent="VerticalWalls" instance=ExtResource( 6 )]
position = Vector2( 750.379, 656.541 )
rotation = 3.14159
scale = Vector2( 1.272, -9 )

[node name="Wall5" parent="VerticalWalls" instance=ExtResource( 6 )]
position = Vector2( 268.428, 351.188 )
rotation = 3.14159
scale = Vector2( 1.27175, -40.3272 )

[node name="Wall7" parent="VerticalWalls" instance=ExtResource( 6 )]
position = Vector2( 1597.17, 356.74 )
rotation = 3.14159
scale = Vector2( 1.27175, -40.3272 )

[node name="Wall9" parent="VerticalWalls" instance=ExtResource( 6 )]
position = Vector2( 1099.36, 40.2835 )
rotation = 3.14159
scale = Vector2( 1.27175, -40.3272 )

[node name="Wall8" parent="VerticalWalls" instance=ExtResource( 6 )]
position = Vector2( 1090.89, 667.644 )
rotation = 3.14159
scale = Vector2( 1.272, -9 )

[node name="Enemy" parent="." instance=ExtResource( 7 )]
position = Vector2( 547.518, 516.653 )

[node name="Enemy2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1170.45, 662.891 )

[node name="Enemy3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1162.17, 80.9529 )

[node name="Enemy6" parent="." instance=ExtResource( 7 )]
position = Vector2( 1164.02, 227.152 )

[node name="Enemy4" parent="." instance=ExtResource( 7 )]
position = Vector2( 1528.05, 135.516 )

[node name="Enemy5" parent="." instance=ExtResource( 7 )]
position = Vector2( 1518.8, -6.98236 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 8 )
Player = NodePath("../player")

[node name="Tween" type="Tween" parent="Camera2D"]
playback_process_mode = 0

[node name="HUD" parent="." instance=ExtResource( 9 )]
script = ExtResource( 10 )

[node name="Restart_Label" type="Label" parent="HUD"]
visible = false
margin_left = -267.647
margin_top = 7.36642
margin_right = 232.353
margin_bottom = 39.3664
rect_scale = Vector2( 3, 3 )
text = "PRESS R TO RESTART"
align = 1

[node name="Load_Fake_Label" type="Label" parent="HUD"]
visible = false
margin_left = -267.647
margin_top = 7.36642
margin_right = 232.353
margin_bottom = 39.3664
rect_scale = Vector2( 3, 3 )
text = "You died!
Press Q 
To load confetti into the enemy's clipazine

Now, press R to restart!"
align = 1

[node name="Shoot_Label" type="Label" parent="HUD"]
visible = false
margin_left = -267.647
margin_top = 7.36642
margin_right = 232.353
margin_bottom = 39.3664
rect_scale = Vector2( 3, 3 )
text = "Dang.
You share a clipazine with the enemies,
Left Click
to shoot

Press R to restart"
align = 1

[node name="Rack_Label" type="Label" parent="HUD"]
visible = false
margin_left = -267.647
margin_top = 7.36642
margin_right = 232.353
margin_bottom = 39.3664
rect_scale = Vector2( 3, 3 )
text = "One last trick,
you can eject the next round with
Right Click

Press R to restart"
align = 1
[connection signal="killed" from="player" to="." method="_on_player_killed"]
